https://github.com/ajancheta/resort-final-

--- a/resort-main.html
+++ b/resort-main.html
@@ -11,9 +11,9 @@
 
   <p>Check out our amenities!</p>
   <ul>
-    <li>Accommodations</li>
-    <li>Activities</li>
-    <li>Pictures</li>
+    <li><a href="resort-accommodations.html">Accommodations</a></li>
+    <li><a href="resort-activities.html">Activities</a></li>
+    <li><a href="resort-pictures.html">Pictures</a></li>
   </ul>
 
   <p>For more information, please contact us at (503) 699-6969.</p>
