add dark style elements to h1, h2, h3 and p

--- a/resort-activities.html
+++ b/resort-activities.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type=link css "text/css">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Resort Activities</title>
 </head>
 <body>
   <h1>Activities at Sand Hill</h1>
   <h2>Here are some cool things to do at Sand Hill resort:</h2>
-  <ul>
-    <li>Get naked!</li>
-    <li>Kite surfing!</li>
-    <li>Paragliding!</li>
-    <li>Jetski!</li>
-  </ul>
+  <p>
+    <br>Get naked!</br>
+    <br>Kite surfing!</br>
+    <br>Paragliding!</br>
+    <br>Jetski!</br>
+  </p>
 </body>
