--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type=link css "text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Sand Hill Resort</title>
 </head>
 <body>
@@ -10,11 +10,11 @@
   <img src="img/island.jpeg" alt="A photo of an island"/>
 
   <p>Check out our amenities!</p>
-  <ul>
+
     <li><a href="resort-accommodations.html">Accommodations</a></li>
     <li><a href="resort-activities.html">Activities</a></li>
     <li><a href="resort-pictures.html">Pictures</a></li>
-  </ul>
+  
 
   <p>For more information, please contact us at (503) 699-6969.</p>
 
