--- a/resort-pictures.html
+++ b/resort-pictures.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type=link css "text/css">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Resort Photos</title>
 </head>
 <body>
